Fixed background size for Home page "About section"
The background height for Home page "About section" is 615px. But the content height inside section container is 655 px. Because of that the white line appeared at the bottom of the section. Solution: set the background size to cover the conteiner height.

--- a/styles.css
+++ b/styles.css
@@ -1363,6 +1363,7 @@ body {
 
 	#about_section {
 		background: url('imgs/about_section_bg.png');
+		background-size: cover;
 	}
 
 	.faq_list_item {
